# mrracer

./: .coverage  .gitignore  README.md  config.example.yaml  pyproject.toml
radar/: __init__.py  __main__.py  business_time.py  coach.py  commands.py  config.py  context.py  db.py  derive.py  diagnostics.py  events.py  gitlab_client.py  jira.py  jira_client.py  notes.py  poller.py  review.py  scheduler.py  service.py  slas.py
radar/web/: __init__.py  app.py
radar/web/static/: radar.css
radar/web/templates/: _board.html  _coach.html  _command_panel.html  _review_panel.html  coach.html  dashboard.html
tests/: conftest.py  test_backend_fetch.py  test_business_time.py  test_coach.py  test_config.py  test_derive.py  test_diagnostics.py  test_jira.py  test_personal_view.py  test_poller.py  test_qa.py  test_review.py  test_skills.py  test_slas.py  test_team.py  test_web.py
