[project]
name = "radar"
version = "0.1.0"
description = "Review Airtime & Deadline Accountability Radar — tracks open GitLab merge requests waiting for code review and enforces business-hours review SLAs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-gitlab>=4.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "apscheduler>=3.10,<4",
    "pyyaml>=6.0",
    "markdown>=3.5",
    "nh3>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.5",
]

[project.scripts]
radar = "radar.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["radar"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
